fixed overflow issue in mobile

--- a/client/stylesheets/home.less
+++ b/client/stylesheets/home.less
@@ -2,6 +2,10 @@
 @import 'lib/elements';
 
 .layout {
+
+  .home.view {
+    overflow: hidden;
+  }
     .boilerplate-feature.icon {
         margin-top: 10px;
         transition: 0.7s color;
